# 10k-samples

./: README.md  pyproject.toml  requirements.txt
nirvana10k/: core.py
nirvana10k/examples/: analyze_sample_example.py
nirvana10k/measurements/: uvvis.py
nirvana10k/read/: h5tosample.py
nirvana10k/utils/: plotting.py
tksamples/: __init__.py  collection.py  collections.py  config.py  core.py  project.py  sample.py  samples.py  thinfilm.py  thinfilms.py  tksamples.py
tksamples/core/: __init__.py  carrier.py  core.py
tksamples/crucible/: __init__.py  client.py  config.py  converters.py  crucible.py
tksamples/examples/: __init__.py  analyze_sample_example.py  check_stability.py  main_workflow.py  project_workflow.py  visualize_all_samples.py
tksamples/graph/: __init__.py  graph.py  visualization.py
tksamples/image/: __init__.py  carrier.py  carrier2samples.py
tksamples/measurements/: __init__.py  image.py  measurement.py  uvvis.py
tksamples/read/: __init__.py  h5tosample.py  h5tosample_legacy.py  tfparser.py
tksamples/utils/: __init__.py  auxiliary.py  plotting.py
