[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tksamples"
description = "Thin film sample characterization with multiple measurement types"
readme = "README.md"
authors = [
    {name = "roncofaber", email = "fabrice.roncoroni@gmail.com"}
]
license = {text = "MIT"}
keywords = ["spectroscopy", "uv-vis", "hdf5", "analysis", "nirvana", "samples"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/roncofaber/10k-samples"
Repository = "https://github.com/roncofaber/10k-samples"
Documentation = "https://github.com/roncofaber/10k-samples#readme"
"Bug Tracker" = "https://github.com/roncofaber/10k-samples/issues"

[tool.setuptools]
packages = [
    "tksamples",
    "tksamples.read",
    "tksamples.measurements",
    "tksamples.core",
    "tksamples.utils",
    "tksamples.crucible",
    "tksamples.image",
    "tksamples.examples"
]

[tool.setuptools.package-data]
"tksamples.examples" = ["*.h5"]

[tool.setuptools.dynamic]
version = {attr = "tksamples.__version__"}